@@ -36,6 +36,10 @@
         <grade>Deltaware</grade>
         <grade>Gammaware</grade>
       </bannedwaregrades>
+      <redlinerexclusion>
+        <limb>skull</limb>
+        <limb>torso</limb>
+      </redlinerexclusion>
     </gameplayoption>
     <gameplayoption>
       <id>5b1281c0-466d-441d-a844-5a2bc93d9843</id>
@@ -53,6 +57,10 @@
         <grade>Deltaware</grade>
         <grade>Gammaware</grade>
       </bannedwaregrades>
+      <redlinerexclusion>
+        <limb>skull</limb>
+        <limb>torso</limb>
+      </redlinerexclusion>
     </gameplayoption>
     <gameplayoption>
       <id>def8a6aa-4bfa-4c73-a20f-2a8e80d2b1df</id>
@@ -70,6 +78,10 @@
         <grade>Deltaware</grade>
         <grade>Gammaware</grade>
       </bannedwaregrades>
+      <redlinerexclusion>
+        <limb>skull</limb>
+        <limb>torso</limb>
+      </redlinerexclusion>
     </gameplayoption>
     <gameplayoption>
       <id>b9d5c0ae-0d2c-4e86-9e09-f42a23ab27a6</id>
@@ -87,6 +99,10 @@
         <grade>Deltaware</grade>
         <grade>Gammaware</grade>
       </bannedwaregrades>
+      <redlinerexclusion>
+        <limb>skull</limb>
+        <limb>torso</limb>
+      </redlinerexclusion>
     </gameplayoption>
   </gameplayoptions>
 </chummer>
