@@ -28,6 +28,13 @@
                         </xs:sequence>
                       </xs:complexType>
                     </xs:element>
+                    <xs:element maxOccurs="unbounded" name="redlinerexclusion">
+                      <xs:complexType>
+                        <xs:sequence>
+                          <xs:element name="limb" type="xs:string" minOccurs="0" maxOccurs="unbounded" />
+                        </xs:sequence>
+                      </xs:complexType>
+                    </xs:element>
                   </xs:sequence>
                 </xs:complexType>
               </xs:element>
